syntax = "proto3";
package generated;

message Empty {}

message InitRequest {
    string plugin = 1;
    map<string, string> config = 2;
}

message AppliesToRequest {
    string plugin = 1;
}

message AppliesToResponse {
    repeated string includedNamespaces = 1;
    repeated string excludedNamespaces = 2;
    repeated string includedResources = 3;
    repeated string excludedResources = 4;
    string selector = 5;
}

message Error {
    int32 code = 1;
    string message = 2;
    Stack stack = 3;
}

message StackFrame {
    string file = 1;
    int32 line = 2;
    string function = 3;
}

message Stack {
    repeated StackFrame frames = 1;
}
